Fixed about box alignment with incomplete fix

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ so we can't rotate at the center without defined dimensions */
 width:84vmin;
 height:12vmin;
 position:absolute;
-top:30%;
+top:30vmin;
 left:50%;
 margin-left:-42vmin;
 transform-origin:center 12vmin;
@@ -70,7 +70,7 @@ transition-duration: 500ms;
 width:96vmin;
 height:12vmin;
 position:absolute;
-top:30%;
+top:30vmin;
 left: 50%;
 margin-left:-48vmin;
 background-color:rgba(0,0,0,1);
@@ -98,7 +98,7 @@ display:inline-block;
 .about{
 width: 96vmin;
 position:absolute;
-bottom:58%;
+top:2vmin; /* Quick fix, need to reference bottom of div to bottom of letterTiles */
 left:50%;
 margin-left:-48vmin;
 transform-origin:bottom;
@@ -174,7 +174,7 @@ overflow:hidden;
 height:12vmin;
 width:44vmin;
 position:absolute;
-bottom:52%;
+bottom:52vmin;
 left:50%;
 margin:0 0 6vmin -44vmin;
 z-index:1;
@@ -248,7 +248,7 @@ width:66.6vmin;
 padding:2vmin 2vmin;
 margin-left:-33.3vmin;
 left:50%;
-bottom:20%;
+bottom:18vmin;
 display:none;
 z-index:1;
 }
@@ -360,7 +360,7 @@ cursor:pointer;
 height:38vmin;
 width:96vmin;
 position:absolute;
-top:38%;
+top:38vmin;
 left:50%;
 transform-origin:top;
 transform:rotateX(90deg);
